k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  k8s-deploy-frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
        - name: k8s-frontend
          image:  k8s_deploy_frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
