k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
#    - host: ew-production.ru
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-frontend-service
                port:
                  number: 80
